--- a/app/src/main/res/layout/activity_jewellery.xml
+++ b/app/src/main/res/layout/activity_jewellery.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="shareholder.infinity.com.ladiesclub.DesignActivity">
+    android:background="@color/colorbackground"
+    tools:context="shareholder.infinity.com.ladiesclub.JewelleryActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/design_list"
+        android:id="@+id/blog_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
 
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
