--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -37,6 +37,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginTop="8dp"
         android:background="@null"
+        android:onClick="startDesignActivity"
         android:src="@drawable/necklace"
         app:layout_constraintBottom_toBottomOf="@+id/youtubebtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,8 +75,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-
         android:background="@null"
+
+        android:onClick="startFeedbackActivity"
         app:layout_constraintStart_toStartOf="@+id/youtubebtn"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@drawable/feedback" />
@@ -85,6 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
+        android:onClick="startAboutActivity"
         app:layout_constraintEnd_toEndOf="@+id/designbtn"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/designbtn"
